--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 OPENWEATHER_API_KEY=13415a7bb7bc25bb585d0069ccf45a20
 PORT=5000
-MONGO_URI=mongodb+srv://ashenruvinda2:dhananji1@ashendb.cb0k8pl.mongodb.net/
+MONGO_URI=mongodb+srv://ashenruvinda481:dhananji1@cluster0.rfvzccs.mongodb.net/
